# openal_plugin

./: .gitmodules  CMakeLists.txt  README.md
include/: OpenAlSoft.hpp  OpenAlSoftFactory.hpp  OpenAlSoftPlugin.hpp
include/al/: OpenAl.hpp
src/: Audio.hpp  OpenAlSoft.cpp  OpenAlSoftFactory.cpp  OpenAlSoftPlugin.cpp
